# quiz-back

./: .gitignore  __main__.py  public.pem  pyproject.toml  requirements.txt
backend/: pyproject.toml
scripts/: generate-token.sh
src/backend/: app.py  security.py
