[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "cryptography>=44.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
